# hros5_ws

./: .gitignore  README.md  cleanenv.sh  frames_2025-06-16_11.59.26.gv  hros5.gv  update_dynamixel.sh
src/: generate_hros5_demos.py
src/hros5_bringup/: CMakeLists.txt  package.xml
src/hros5_bringup/launch/: gazebo_launch.py  hros5_rviz_launch.py  rviz_launch.py  test_hand_control.launch.py
src/hros5_control/: CMakeLists.txt  package.xml
src/hros5_control/config/: dynamixel.yaml  hand_test_controllers.yaml  left_arm_position_controller.yaml  left_leg_controller.yaml  position_controllers.yaml  right_arm_position_controller.yaml  right_leg_controller.yaml  trajectory_controllers.yaml
src/hros5_control/launch/: bringup_with_control.launch.py  launch_leg_trajectory_control.py  left_leg_control.launch.py  position.launch.py  trajectory.launch.py
src/hros5_demos/: CMakeLists.txt  package.xml
src/hros5_demos/config/: servo_control.yaml
src/hros5_demos/description/: single_servo.urdf
src/hros5_demos/launch/: test_single_servo.launch.py
src/hros5_description/: CMakeLists.txt  generate_xacro_files.py  package.xml
src/hros5_description/launch/: display.launch.py  display_head.launch.py  display_hros5_launch.py  test_dynamixel.launch.py
src/hros5_description/meshes/hands/: FR07-E170.stl  FR07-E171.stl  FR07-S101.stl  HN07-N101.stl
src/hros5_description/rviz/: display_head.rviz  hros5.rviz  hros5.rviz.old
src/hros5_description/urdf/: display_hands.urdf.xacro  display_head.urdf.xacro  hros5.urdf.xacro  hros5.xacro  hros5_control.xacro  hros5_visuals_collisions_endoskeleton.xacro  minimal.urdf.xacro  test_hand_control.urdf.xacro
src/hros5_description/urdf/arms/: left_arm.xacro  left_arm_debug.xacro  right_arm.xacro  right_arm_debug.xacro
src/hros5_description/urdf/common/: macros.xacro  materials.xacro
src/hros5_description/urdf/hands/: hands.xacro  hands_control.xacro
src/hros5_description/urdf/head/: camera.xacro  head.xacro  head_debug.xacro
src/hros5_description/urdf/legs/: left_leg.xacro  left_leg_debug.xacro  legs.xacro  right_leg.xacro  right_leg_debug.xacro
src/hros5_description/urdf/robot/: robot.xacro
src/hros5_description/urdf/torso/: base.xacro  imu.xacro  torso.xacro
src/hros5_navigation/: CMakeLists.txt  package.xml
src/hros5_navigation/src/: hros5_navigation_node.cpp
src/hros5_teleop/: CMakeLists.txt  package.xml
src/hros5_teleop/launch/: teleop_launch.py
