<?xml version="1.0"?>
<package format="3">
  <name>hros5_demos</name>
  <version>0.1.0</version>
  <description>Test and prototype components for hros5 (ROS 2 Jazzy)</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>dynamixel_hardware</exec_depend>
<export>
  <build_type>ament_cmake</build_type>
</export>

</package>
