<?xml version="1.0"?>
<package format="3">
  <name>hros5_description</name>
  <version>0.1.0</version>
  <description>ROS 2 Jazzy port of hros5 robot description</description>
  <maintainer email="pengatom@example.com">Pengatom</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>rviz2</depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

