<?xml version="1.0"?>
<package format="3">
  <name>hros5_navigation</name>
  <version>0.0.0</version>
  <description>The hros5_navigation package</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
</package>
